--- a/.github/workflows/scheduledUpdate.yml
+++ b/.github/workflows/scheduledUpdate.yml
@@ -22,6 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: echo "Updating..."
     - run: |
+           npm install 
            npm run freshupdate
            git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
            git pull github ${GITHUB_REF} --ff-only
