--- a/.github/workflows/scheduledUpdate.yml
+++ b/.github/workflows/scheduledUpdate.yml
@@ -26,7 +26,7 @@ jobs:
            npm run freshupdate $KEY
            git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
            git pull github ${GITHUB_REF} --ff-only
-           git add ...
+           git add .
            git commit -m "Update native model"
            git push github HEAD:${GITHUB_REF}
       env:
