--- a/.github/workflows/scheduledUpdate.yml
+++ b/.github/workflows/scheduledUpdate.yml
@@ -27,7 +27,7 @@ jobs:
            git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
            git pull github ${GITHUB_REF} --ff-only
            git add .
-           git commit -m "Update native model"
+           git commit -m "Scheduled Update"
            git push github HEAD:${GITHUB_REF}
       env:
         KEY: ${{ secrets.API_KEY }}
