--- a/.github/workflows/scheduledUpdate.yml
+++ b/.github/workflows/scheduledUpdate.yml
@@ -24,6 +24,8 @@ jobs:
     - run: |
            npm install 
            npm run freshupdate $KEY
+           git config --global user.email "bot@cc2bots.cf"
+           git config --global user.name "AutoUpdateBotFriend"
            git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
            git pull github ${GITHUB_REF} --ff-only
            git add .
