--- a/.github/workflows/scheduledUpdate.yml
+++ b/.github/workflows/scheduledUpdate.yml
@@ -2,8 +2,8 @@ name: Node.js CI
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: "6 9 * * *"
+  #schedule:
+  #- cron: "6 9 * * *"
 
 jobs:
   build:
